apply plugin: 'com.android.application'

android {
    namespace 'com.google.android.usbdebugger'
    compileSdk 34

    defaultConfig {
        applicationId "com.google.android.usbdebugger"
        minSdk 21
        targetSdk 34
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

        multiDexEnabled true // <-- ВАЖНО: Разрешаем использование MultiDex
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    // Фикс дубликатов META-INF (LICENSE.md, NOTICE.md и другие)
    packagingOptions {
        resources {
            excludes += ['META-INF/LICENSE.md', 'META-INF/LICENSE.txt', 'META-INF/LICENSE', 'META-INF/NOTICE.md', 'META-INF/NOTICE.txt', 'META-INF/DEPENDENCIES', 'META-INF/notice.txt']
            pickFirst '**/libc++_shared.so'  // Для NDK, если нужно
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

dependencies {
    implementation 'androidx.appcompat:appcompat:1.7.0'
    implementation 'com.google.android.material:material:1.11.0'

    // ИСПРАВЛЕНО: Правильная зависимость для ConstraintLayout
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'

    // ВАЖНО: Добавьте эти строки для полной совместимости
    implementation 'androidx.core:core-ktx:1.13.1'
    implementation 'androidx.activity:activity:1.9.0'


    // Фикс LayoutRes
    implementation 'androidx.annotation:annotation:1.8.2'

    // Зависимость для MultiDex, используемая в Hello.java
    implementation 'androidx.multidex:multidex:2.0.1'

    // Обновлённые libs
    implementation 'commons-io:commons-io:2.16.1'
    implementation 'com.sun.mail:android-mail:1.6.7'

    // HTTP/FTP
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
    implementation 'commons-net:commons-net:3.9.0'  // Стабильная версия

    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
}
